Fixing hidden overflow in [code] tags. (If there's a better place for this feel free to move it, I'm not familiar with the style sheet structure at all...)

--- a/upload/style/imports/base.css
+++ b/upload/style/imports/base.css
@@ -35,6 +35,8 @@
 
 DIV.blockpost DIV.box, DIV.postleft, DIV.postsignature, DIV.postmsg {OVERFLOW: hidden}
 
+.pun PRE {OVERFLOW: auto}
+
 /****************************************************************/
 /* 3. BUG FIXES - VERY IMPORTANT - DO NOT CHANGE */
 /****************************************************************/
